i6393824 - more uml diagrams and added Alert decorators